# claudeshorts

./: .env.example  .gitignore  AGENTS.md  BUILD_PLAN.md  CHECKPOINT_LAST.md  CLAUDE.md  NEEDS_FROM_YOU.md  NEXT_SESSION_PROMPT.md  PLAN.md  README.md  TASK_QUEUE.md  goal.md  pyproject.toml  requirements.txt  start-dashboard.bat  start-dashboard.command  start-dashboard.sh
.opencode/opencode-loop/: ses_0b40f361bffeDrHI8D2Y7rEAVx.json
.serena/: project.yml
Brandkit/fork/: README.md  banner.html  gemini-prompt-banner.json  gemini-prompt-highlight-cover.json  gemini-prompt-logo.json  highlight-cover.html  logo.html
assets/: README.md
claudeshorts/: __init__.py  cli.py  config.py  logging_setup.py  progress.py
claudeshorts/api/: __init__.py  articles.py  errors.py  jobs.py  pipeline.py  posts.py  profiles.py  schemas.py
claudeshorts/browser/: profiles.py
claudeshorts/dashboard/: __init__.py  app.py  auth.py  jobs.py  settings_io.py
claudeshorts/generate/: __init__.py  generator.py  runner.py  schema.py  select.py  style_rules.py
claudeshorts/ingest/: __init__.py  fetchers.py  runner.py
claudeshorts/jobs/: queue.py  registry.py  worker.py
claudeshorts/orchestrate/: __init__.py  runner.py
config/: settings.yaml  sources.yaml
deploy/: README.md  claudeshorts.service  claudeshorts.timer
docs/: ARCHITECTURE.md  PLAN_local_model.md  PROGRESS.md
renderer/: package-lock.json  package.json  render.mjs
scripts/: migrate_profiles_backfill.py  migrate_sqlite_to_supabase.py
tests/: test_cli.py  test_config.py  test_logging_setup.py
(+141 files in other folders)
