[project]
name = "claudeshorts"
version = "0.1.0"
description = "Automated pipeline turning daily tech/AI news into short-form video/slideshow posts via Claude."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "feedparser>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
claudeshorts = "claudeshorts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claudeshorts"]
